--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
 body {
   background-color: pink;
 }
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: rgb(223, 222, 222);
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: rgba(160, 7, 7, 0.577);
+}
