--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,39 @@
 body {
   background-color: pink;
 }
+
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+
+.display-container {
+  display: grid;
+  grid-template-columns: 100px 100px;
+}
+
+.info-display {
+  font-size: 25px;
+  display: block;
+}
