--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,70 @@
+/* can import font libraries this way in an external css */
+@import url("https://fonts.googleapis.com/css?family=Lobster");
+
 body {
   background-color: pink;
+}
+.card {
+  margin: 50px;
+  padding: 50px;
+  background-color: whitesmoke;
+  /* width: 250px; */
+  text-align: center;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 10px;
+  font-size: 50px;
+}
+
+.name {
+  margin: 10px;
+  /* font-size: 200px; */
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  colour: red;
+}
+
+#header {
+  font-family: Lobster, monospace;
+  font-size: 5em;
+}
+
+.row {
+  font-family: Lobster, monospace;
+}
+
+.card-container-player-1 {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  /* width: 250px; */
+  text-align: center;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+.card-container-player-2 {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  /* width: 250px; */
+  text-align: center;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+#game-info {
+  font-family: sans-serif;
+  font-size: 30px;
+}
+
+.button {
+  font-size: 25px;
+  margin: 5px;
 }
