--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,36 @@
 body {
   background-color: pink;
 }
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+.card-container {
+  position: relative;
+  background-image: url("img.jfif");
+  background-size: 100%;
+  border-style: solid;
+  margin: 20px;
+  border-color: black;
+}
