--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 .card {
   margin: 10px;
   padding: 10px;
-  background-color: grey;
+  background-color: white;
   width: 50px;
   text-align: center;
   border-radius: 8px;
