added high/low card

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,15 @@ body {
   display: inline-block;
 }
 
+.card-container {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  width: 1000px;
+  border-radius: 8px;
+  display: inline-block;
+}
+
 .suit {
   margin: 5px;
   font-size: 20px;
