added get results button, both players can draw multiple cards that will display in a row, logic for high/lowcard still missing

--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,13 @@ body {
 .black {
   color: black;
 }
+
+.playerContainer {
+  background-color: green;
+  border-radius: 10px;
+}
+
+h2 {
+  margin: 15px;
+  color: #fff;
+}
