high / low card with 3 cards always

--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,10 @@ body {
 .card {
   margin: 10px;
   padding: 10px;
-  background-color: grey;
+  background-color: white;
   width: 50px;
   text-align: center;
+  border: solid 2px;
   border-radius: 8px;
   display: inline-block;
 }
