--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,38 @@
 body {
-  background-color: pink;
+  background-color: rgb(53, 101, 77);
+}
+
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: whitesmoke;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 30px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+
+.textContainer {
+  width: 200px;
+  padding: 20px;
+  border: 5px solid white;
+  margin: 0;
+  font-size: 20px;
+  color: rgb(197, 179, 88);
 }
