Comfortable - High/Low Card. 2nd player card positioning accuracy can be improved

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,12 @@ body {
   display: inline-block;
 }
 
+.player2 {
+  position: relative;
+  right: 90px;
+  top: 150px;
+}
+
 .suit {
   margin: 5px;
   font-size: 20px;
