--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,46 @@ body {
   background-color: pink;
 }
 
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  margin: auto;
+  flex-wrap: wrap;
+}
+
+#player-1,
+#player-2 {
+  position: relative;
+  display: flex;
+  width: 49%;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+  border: solid 2px black;
+  background-color: powderblue;
+}
+
+#button-player-1,
+#button-player-2 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 100px;
+}
+
 .card {
-  margin: 10px;
+  margin: 8px;
   padding: 10px;
   background-color: white;
   width: 50px;
+  height: 70px;
   text-align: center;
   border: solid 2px;
   border-radius: 8px;
