--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,17 @@ body {
 .black {
   color: black;
 }
+
+.high {
+  border: rgb(74, 206, 74);
+  border-radius: 20%;
+  border-width: 5px;
+  border-style: solid;
+}
+
+.low {
+  border: rgb(206, 18, 18);
+  border-radius: 20%;
+  border-width: 5px;
+  border-style: solid;
+}
