--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,14 @@ body {
   font-size: 20px;
   color: rgb(197, 179, 88);
 }
+
+.playerContainer {
+  width: 200px;
+  padding: 20px;
+  border: 5px solid white;
+  margin: 0;
+  font-size: 20px;
+
+  display: inline-block;
+  vertical-align: middle;
+}
