Comfortable - Used JS instead of CSS to create P2 cards in a separate row

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@ body {
   display: inline-block;
 }
 
-.player2 {
+/* .player2 {
   position: relative;
   right: 90px;
   top: 150px;
-}
+} */
 
 .suit {
   margin: 5px;
