--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   background-color: pink;
 }
+
 .card {
   margin: 10px;
   padding: 10px;
@@ -27,16 +28,21 @@ body {
   color: red;
 }
 
-.container {
-  background-color: grey;
-  border-radius: 10px;
-  padding: 5px;
-  height: 300px;
-}
-
 .button {
   padding: 10px;
   border-radius: 10px;
+}
+
+h1 {
+  text-align: center;
+}
+
+#container {
+  background-color: grey;
+  margin: 0px 300px 0px 300px;
+  border-radius: 10px;
+  padding: 10px;
+  height: 220px;
 }
 
 table {
@@ -45,4 +51,26 @@ table {
 
 td {
   width: 50%;
+}
+
+#button-field-container {
+  text-align: center;
+  margin: 0px 300px 0px 300px;
+}
+
+#button-one {
+  float: left;
+}
+
+#button-two {
+  float: right;
+}
+
+#input-field {
+  margin-top: 10px;
+}
+
+#info-container {
+  text-align: center;
+  margin: 10px 300px 0px 300px;
 }
