--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,45 @@ body {
   color: red;
 }
 
+.game-box-div {
+  border: 5px solid black;
+  height: 320px;
+  width: 465px;
+  padding: 10px;
+}
+
+.game-info {
+  margin: 10px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+}
+
+.input-div {
+  margin: 10px 10px 10px 0;
+}
+
+.buttons-div {
+  margin: 10px 10px 10px 0;
+  padding: 0;
+}
+
+.button {
+  margin-right: 20px;
+}
+
+.input {
+  margin-right: 5px;
+  align-items: center;
+  width: 210px;
+}
+
 .card-container {
   margin: 5px;
-  border: 5px solid black;
   height: 105px;
+  border: 2px solid black;
 }
 
 .card-container-title {
-  margin-bottom: 0px;
-  margin-top: 10px;
+  margin: 10px 0 0 10px;
 }
