--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,44 @@
-body {
-  background-color: pink;
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: white;
+  width: 50px;
+  height: 70px;
+  text-align: center;
+  border-radius: 8px;
+  display: block;
+}
+.card2 {
+  margin: 10px;
+  padding: 10px;
+  background-color: white;
+  width: 50px;
+  height: 70px;
+  text-align: center;
+  border-radius: 8px;
+  display: block;
+  margin-left: 70%;
+}
+.card-container {
+  display: block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+.game-message {
+  color: white;
+  text-align: center;
 }
