--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,15 @@ body {
   margin: 10px;
   padding: 10px;
   background-color: white;
-  width: 250px;
+  /* width: 250px; */
   text-align: center;
   border-radius: 8px;
-  display: inline-block;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .card {
-  margin: 10px;
+  margin: 30px 10px 10px 10px;
   padding: 10px;
   background-color: lightgrey;
   width: 50px;
