--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,52 @@
+#header {
+  text-align: center;
+  font-size: 50px;
+}
 body {
-  background-color: pink;
+  background-color: green;
+}
+.player1 {
+  position: absolute;
+  left: 20%;
+}
+.player2 {
+  position: absolute;
+  right: 20%;
+}
+.card {
+  /* margin: 10px; */
+  padding: 10px;
+  background-color: white;
+  width: 10%;
+  height: 30%;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 60px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+
+button {
+  top: 500px;
+  width: 10%;
+  height: 5%;
+}
+
+#message {
+  text-align: center;
+  font-size: 20px;
 }
