--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,51 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: pink;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.high-playing-area {
+  border: 1px dotted blue;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.high-mat {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 500px;
+  height: 300px;
+  padding: 30px;
+  background-color: white;
+}
+.high-seat-row {
+  display: flex;
+  width: 100%;
+  height: 80%;
+  border: 1px dotted grey;
+  justify-content: space-around;
+}
+.high-seat {
+  margin-top: 30px;
+  width: 40px;
+  height: 60px;
+  border: 1px dotted grey;
+  display: flex;
+}
+.high-banner {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.high-button-row {
+  display: flex;
+  justify-content: space-around;
 }
