--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: pink;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,11 +43,11 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
+  height: 30px;
 }
 .high-button-row {
   display: flex;
   flex-direction: row;
   width: 100%;
-
   justify-content: space-around;
 }
