--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
   flex-direction: column;
   align-items: center;
 }
-
 .high-playing-area {
   border: 1px dotted blue;
 
@@ -34,10 +33,11 @@ body {
 }
 .high-seat {
   margin-top: 30px;
-  width: 40px;
-  height: 60px;
+  width: 50px;
+  height: 70px;
   border: 1px dotted grey;
   display: flex;
+  justify-content: center;
 }
 .high-banner {
   display: flex;
@@ -54,5 +54,21 @@ body {
 .high-card {
   display: flex;
   text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.high-card-suit {
+  display: flex;
+  text-align: center;
+  align-items: center;
+
+  justify-content: center;
+}
+.high-card-name {
+  display: flex;
+  text-align: center;
+  align-items: center;
+
   justify-content: center;
 }
