--- a/styles.css
+++ b/styles.css
@@ -4,49 +4,78 @@
 }
 body {
   background-color: green;
+  font-family: sans-serif;
 }
-.player1 {
-  position: absolute;
-  left: 20%;
+button {
+  top: 500px;
+  width: 10%;
+  height: 5%;
+  text-align: center;
+  bottom: 5em;
 }
-.player2 {
-  position: absolute;
-  right: 20%;
+.card-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-areas: "left right";
+  justify-content: space-around;
+  /* grid-gap: 10px; */
+  margin-left: auto;
+  margin-right: auto;
+  /* height: max-content; */
 }
 .card {
-  /* margin: 10px; */
-  padding: 10px;
   background-color: white;
-  width: 10%;
-  height: 30%;
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+  height: 75%;
   text-align: center;
   border-radius: 8px;
   display: inline-block;
+  font-size: 40px;
+  font-weight: bold;
+  display: inline-block;
 }
 
-.suit {
+.player1 {
+  grid-area: left;
+  position: relative;
+}
+.player2 {
+  grid-area: right;
+  position: relative;
+}
+
+.card1 {
+  left: 150%;
+}
+.card2 {
+  left: 300%;
+}
+
+/* .suit {
   margin: 5px;
   font-size: 60px;
 }
 
 .name {
   margin: 5px;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: bold;
-  font-family: sans-serif;
-}
+} */
 
 .red {
   color: red;
 }
 
-button {
-  top: 500px;
-  width: 10%;
-  height: 5%;
-}
-
 #message {
   text-align: center;
   font-size: 20px;
+  height: max-content;
+  color: blanchedalmond;
+  /* position: fixed; */
+}
+
+.result {
+  display: inline-block;
 }
