--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,9 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
 }
 .high-card-suit {
   display: flex;
