--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,39 @@
-body {
-  background-color: pink;
+.player {
+  width: 40%;
+  border: solid 5px #f5f5f5;
+  border-radius: 10px;
+  padding: 10px;
+  display: inline-block;
+  margin: 1%;
+  vertical-align: top;
+  background: #f5f5f5;
+}
+
+.points {
+  text-align: center;
+  font-size: 20pt;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.card {
+  margin: 10px;
+  padding: 10px;
+  background-color: grey;
+  width: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
 }
