--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,48 @@
 body {
   background-color: pink;
+  font-family: "Roboto", sans-serif;
+  margin: 5vw 20vw 0 20vw;
+  text-align: center;
+}
+.card {
+  margin: 10px;
+  padding: 50px;
+  background-color: white;
+  width: 10px;
+  height: 50px;
+  text-align: center;
+  border-radius: 8px;
+  display: inline-block;
+}
+
+.suit {
+  margin: 5px;
+  font-size: 20px;
+}
+
+.name {
+  margin: 5px;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+.red {
+  color: red;
+}
+
+.player-button {
+  margin: 0px 20px 10px 0px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  width: 150px;
+  background-color: rgb(26, 199, 98);
+  border-radius: 2px;
+  border: 1px solid rgb(5, 204, 72);
+}
+
+#player-box {
+  padding: 5px 5px;
+  text-align: left;
+  margin-bottom: 10px;
 }
